--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number guessing game</title>
     <link rel="stylesheet" href="style.css">
+    <!--Google Icon-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,700,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    
 </head>
 <body>
@@ -14,10 +17,16 @@
         <br><br>
         <h4>Enter the number</h4>
         <input type="text" name="" id="numInput"><br><br>
-        <button id="submitBtn" onclick="sumbit()">Guess</button>
+        <button id="submitBtn" onclick="sumbit()">Guess<span class="material-symbols-outlined">
+            emoji_objects
+            </span></button>
         <h3 id="h3txt"></h3>
         <h3 id="h3txt2"></h3>
+
     </div>
+    <button id="newGameIcon" onclick="newGame()"><span class="material-symbols-outlined">
+        sports_esports
+        </span>New</button>
     
 <script src="script.js"></script>
 </body>
